--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,20 @@
 .jumbotron{
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
-    background: #9575cd;
-    color: floralwhite;
+    background-color: #d1c4e9;
 }
 
 .address{
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
+}
+body{
+    padding: 50px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: #512DA8;
+
 }
