--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     padding: 20px 0px 20px 0px;
 }
 
-.jumbotron{
+.jumbotron-header{
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
     background-color: #d1c4e9;
