--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
   margin: 0px auto;
   padding: 0px, 0px; }
 
+.modal-header {
+  background-color: #512Da8; }
+
+.modal-body {
+  background-attachment: #9675CD; }
+
 .row-content {
   margin: 0px auto;
   padding: 50px, 0px;
@@ -51,5 +57,3 @@ body {
   right: 0px;
   position: absolute;
   bottom: 0px; }
-
-
